# ArmRobotic5DOF

./: .gitignore  README.md
notas/: converter.py  notas.txt
src/arm_control/: CMakeLists.txt  package.xml
src/arm_control/config/: controllers.yaml  ros2_controllers.yaml
src/arm_control/launch/: controller.launch.py  real_robot.launch.py
src/arm_description/: CMakeLists.txt  package.xml
src/arm_description/config/: ros2_controllers.yaml
src/arm_description/launch/: display.launch.py  gazebo.launch.py  view_meu_braco.launch.py
src/arm_description/meshes/: garra.stl
src/arm_description/scripts/: apontar_objeto.py
src/arm_description/urdf/: arm_hardware.xacro  crane_plus_gripper.xacro  crane_plus_hardware.xacro  meu_braco.gazebo_control.xacro  meu_braco.hardware.xacro  meu_braco.hardware_control.xacro  meu_braco.urdf.xacro  meu_braco_atual.urdf.xacro  meu_braco_final.urdf  model_ros2_control.xacro  pincher_arm.ros2_control.xacro  real_robot.ros2_control.xacro  turtlebot_arm.urdf.xacro  turtlebot_arm.xacro  turtlebot_gripper.xacro
src/arm_hardware/: CMakeLists.txt  package.xml  ros2_control.xml
src/arm_hardware/include/arm_hardware/: arm_hardware_interface.hpp
src/arm_hardware/src/: arm_hardware_interface.cpp
src/arm_py_examples/: package.xml  setup.py
src/arm_py_examples/arm_py_examples/: test_point.py
src/braco_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/braco_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml  (+3 more)
src/firmware/: firmware.ino  firmware2.ino
(+11 files in other folders)
